/*
 * This file was generated by the Gradle 'init' task.
 *
 * This generated file contains a sample Java application project to get you started.
 * For more details on building Java & JVM projects, please refer to https://docs.gradle.org/9.2.0/userguide/building_java_projects.html in the Gradle documentation.
 */
import com.github.jengelman.gradle.plugins.shadow.tasks.ShadowJar
plugins {
    // Apply the application plugin to add support for building a CLI application in Java.
    application
    java
    id("com.gradleup.shadow")  version "8.3.10"
}

repositories {
    // Use Maven Central for resolving dependencies.
    mavenCentral()
    maven { url = uri("https://jitpack.io") }
}

dependencies {

    implementation("com.github.teamnewpipe:NewPipeExtractor:v0.26.0")
    implementation("uk.co.caprica:vlcj:4.12.1")
    implementation("org.eclipse.jetty:jetty-client:12.1.8")
    implementation("org.eclipse.jetty.http3:jetty-http3-client:12.1.8")
    implementation("org.eclipse.jetty.quic:jetty-quic-quiche-client:12.1.8")
    val flatlafVersion = "3.7.1"
    implementation( "com.formdev:flatlaf:${flatlafVersion}" )
    implementation( "com.formdev:flatlaf:${flatlafVersion}:linux-x86_64@so" )
    implementation( "com.formdev:flatlaf:${flatlafVersion}:macos-arm64@dylib" )
    implementation( "com.formdev:flatlaf:${flatlafVersion}:macos-x86_64@dylib" )
    implementation( "com.formdev:flatlaf:${flatlafVersion}:windows-x86_64@dll" )

        // 32-bit (not needed if you bundle a 64-bit JRE with your application)
    implementation( "com.formdev:flatlaf:${flatlafVersion}:windows-x86@dll" )

        // ARM 64-bit (not needed if your application does not support Windows on ARM)
    implementation( "com.formdev:flatlaf:${flatlafVersion}:windows-arm64@dll" )
    implementation( "com.formdev:flatlaf-extras:${flatlafVersion}" )
    implementation("info.picocli:picocli:4.7.7")
    implementation("org.sejda.imageio:webp-imageio:0.1.6")


}

// Apply a specific Java toolchain to ease working on different environments.
java {
    toolchain {
        languageVersion = JavaLanguageVersion.of(25)
    }
}

tasks.withType<ShadowJar> {
    archiveFileName.set("NewPipe.jar")
    manifest {
        attributes("Main-Class" to "org.zane.newpipe.Main")
        attributes("Enable-Native-Access" to "ALL-UNNAMED")
    }
}
application {
    // Define the main class for the application.
    mainClass = "org.zane.newpipe.Main"

}
